--- a/3d.html
+++ b/3d.html
@@ -113,7 +113,79 @@
 </script>
 <script src="object.js"></script>
 <script src="makeworld.js"></script>
+<script src="gpu-browser.min.js"></script>
+
 <script>
+
+    
+function testcpu(){
+stm = Date.now()
+
+const generateMatrices = () => {
+  const matrices = [[], []]
+  for (let y = 0; y < 1024; y++){
+      matrices[0].push([])
+      matrices[1].push([])
+      for (let x = 0; x < 1024; x++){
+      matrices[0][y].push(Math.random())
+      matrices[1][y].push(Math.random())
+      }
+  }
+  return matrices
+  }
+  
+  const gpu = new GPU({ mode: 'cpu', });
+  const multiplyMatrix = gpu.createKernel(function(a, b) {
+  let sum = 0;
+  for (let i = 0; i < 1024; i++) {
+      sum += a[this.thread.y][i] * b[i][this.thread.x];
+  }
+  return sum;
+  }).setOutput([1024, 1024])
+  
+  
+  const matrices = generateMatrices()
+  const out = multiplyMatrix(matrices[0], matrices[1])
+
+etm = Date.now()
+console.log((etm-stm)+"ミリ秒")
+}
+function testgpu(){
+stm = Date.now()
+
+const generateMatrices = () => {
+  const matrices = [[], []]
+  for (let y = 0; y < 1024; y++){
+      matrices[0].push([])
+      matrices[1].push([])
+      for (let x = 0; x < 1024; x++){
+      matrices[0][y].push(Math.random())
+      matrices[1][y].push(Math.random())
+      }
+  }
+  return matrices
+  }
+  
+  const gpu = new GPU({ mode: 'gpu', });
+  const multiplyMatrix = gpu.createKernel(function(a, b) {
+  let sum = 0;
+  for (let i = 0; i < 1024; i++) {
+      sum += a[this.thread.y][i] * b[i][this.thread.x];
+  }
+  return sum;
+  }).setOutput([1024, 1024])
+  
+  
+  const matrices = generateMatrices()
+  const out = multiplyMatrix(matrices[0], matrices[1])
+
+etm = Date.now()
+console.log((etm-stm)+"ミリ秒")
+}
+
+
+
+
 
 var plocka = true
 {
